k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  namespace: node-app
  labels:
    app: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      name: node-pod
      namespace: node-app
      labels:
        app: node-app
    spec:
      containers:
        - name: node-container
          image: thapabharat/node.js-app
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
