k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: node-pod
  namespace: node-app

spec:
  containers:
    - name: node-container
      image: thapabharat/node.js-app
      ports:
        - containerPort: 8000
