k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: node-app
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30008
